--- a/ultralytics/cfg/models/11/myyolo.yaml
+++ b/ultralytics/cfg/models/11/myyolo.yaml
@@ -40,7 +40,7 @@ backbone:
   - [-1, 2, C3k2, [512, False, 0.25]]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
   - [-1, 2, C3k2, [512, True]]
-  - [-1, 1, DCNv4, [1024, 3, 2, 4]] # 7-P5/32 with DCNv4
+  - [-1, 1, DCNv4, [1024, 3, 2]] # 7-P5/32 with DCNv4
   - [-1, 2, C3k2, [1024, True]]
   - [-1, 2, C2PSA, [1024]] # 9
 
