重命名ECA模块为ECA_Layer，并更新相关引用；修改myyolo.yaml中的ECA_Layer配置

--- a/ultralytics/cfg/models/11/myyolo.yaml
+++ b/ultralytics/cfg/models/11/myyolo.yaml
@@ -24,7 +24,7 @@ backbone:
   - [-1, 1, CBAM, [384]]  # 6: 卷积注意力模块，同时关注通道和空间维度
   # - [-1, 1, DilatedConv, [384, 3, 2, 2]]  # 7-P4/16: 空洞卷积，增大感受野
   - [-1, 2, C3k2, [512, True]]  # 8: 标准C3模块
-  - [-1, 1, ECAModule, [512]]  # 9: 高效通道注意力
+  - [-1, 1, ECA_Layer, [512]]  # 9: 高效通道注意力
   - [-1, 1, Conv, [768, 3, 2]]  # 10-P5/32: 最终下采样
   - [-1, 2, C3k2, [768, True]]  # 11: 深层特征提取
   - [-1, 1, SPPF, [768, 5]]  # 12: 空间金字塔池化，捕获多尺度信息
