更新.gitignore文件以忽略新的Jupyter笔记本文件；注释掉myyolo.yaml中的一些注意力机制模块；修改DepthwiseSeparableConv类的初始化参数以支持更多配置选项。

--- a/ultralytics/cfg/models/11/myyolo.yaml
+++ b/ultralytics/cfg/models/11/myyolo.yaml
@@ -18,16 +18,16 @@ backbone:
   - [-1, 1, Conv, [32, 3, 2]]  # 0-P1/2: 标准卷积层
   - [-1, 1, DepthwiseSeparableConv, [32, 3, 2]]  # 1-P2/4: 深度可分离卷积，减少参数量
   - [-1, 2, C3k2, [128, False, 0.25]]  # 2: 轻量级C3模块
-  - [-1, 1, SELayer, [128]]  # 3: 添加SE注意力机制，增强特征表达
+  # - [-1, 1, SELayer, [128]]  # 3: 添加SE注意力机制，增强特征表达
   - [-1, 1, Conv, [128, 3, 2]]  # 4-P3/8: 下采样
   - [-1, 2, C3k2, [256, False, 0.25]]  # 5: 增加通道数
   - [-1, 1, CBAM, [256]]  # 6: 卷积注意力模块，同时关注通道和空间维度
   # - [-1, 1, DilatedConv, [256, 3, 2, 2]]  # 7-P4/16: 空洞卷积，增大感受野
   - [-1, 2, C3k2, [384, True]]  # 8: 标准C3模块
-  - [-1, 1, ECA_Layer, [384]]  # 9: 高效通道注意力
+  # - [-1, 1, ECA_Layer, [384]]  # 9: 高效通道注意力
   - [-1, 1, Conv, [512, 3, 2]]  # 10-P5/32: 最终下采样
   - [-1, 2, C3k2, [512, True]]  # 11: 深层特征提取
-  - [-1, 1, SPPF, [512, 5]]  # 12: 空间金字塔池化，捕获多尺度信息
+  # - [-1, 1, SPPF, [512, 5]]  # 12: 空间金字塔池化，捕获多尺度信息
 
 # 分类头部
 head:
